--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -157,7 +157,7 @@
 		-webkit-transition: color 0.2s ease, border-color 0.2s ease;
 		-ms-transition: color 0.2s ease, border-color 0.2s ease;
 		transition: color 0.2s ease, border-color 0.2s ease;
-		color: inherit;
+		color: #000;
 		text-decoration: none;
 	}
 
@@ -541,15 +541,6 @@
 					}
 
 					ul.icons li a:before {
-						color: #ffffff;
-						text-shadow: 1.25px 0px 0px #c8cccf, -1.25px 0px 0px #c8cccf, 0px 1.25px 0px #c8cccf, 0px -1.25px 0px #c8cccf;
-					}
-
-					ul.icons li a:hover:before {
-						text-shadow: 1.25px 0px 0px #ff7496, -1.25px 0px 0px #ff7496, 0px 1.25px 0px #ff7496, 0px -1.25px 0px #ff7496;
-					}
-
-					ul.icons li a:before {
 						position: absolute;
 						top: 0;
 						left: 0;
@@ -854,3 +845,26 @@
 		body.is-ie #wrapper {
 			height: 100%;
 		}
+
+/* Custome Styling */
+.projectBox {
+	background-color: #fff;
+	width: 30%;
+	display: inline-block;
+}
+.projectScene {
+	text-align: center;
+	display: block !important;
+	padding: 5% 5% 5% 5%;
+}
+
+/* Have to figure out media queries for these next */
+@media screen and (max-width: 360px) {
+	.projectBox {
+		background-color: #fff;
+		width: 100%;
+		display: inline-block;
+	}
+}
+
+
